Velcro test First SandBox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Future_Open_Orders__c</fullName>
        <description>from Oracle</description>
        <inlineHelpText>Open orders (not shipped) with an expected ship date in the next fiscal year and beyond</inlineHelpText>
        <label>Future Open Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geo_Region__c</fullName>
        <inlineHelpText>The geographical region within the region.</inlineHelpText>
        <label>Geo Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_To_Market_Strategy__c</fullName>
        <label>Go To Market Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Goal_Attainment__c</fullName>
        <description>Measure of YTD Revenue vs. Goal</description>
        <formula>YTD_Revenue_Generated__c  /  Current_Year_Revenue_Goal__c</formula>
        <label>% Goal Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Budget_MTD__c</fullName>
        <inlineHelpText>Gross Budget MTD from Oracle</inlineHelpText>
        <label>Gross Budget MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Budget_YTD__c</fullName>
        <inlineHelpText>The Gross Budget YTD from Oracle.</inlineHelpText>
        <label>Gross Budget YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Budget__c</fullName>
        <inlineHelpText>Gross Budget from Oracle</inlineHelpText>
        <label>Gross Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Potential_Forecast_Full_Year__c</fullName>
        <description>EMEA-only field</description>
        <label>Gross Potential (Forecast Full Year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Growth_Area__c</fullName>
        <description>EMEA-only field</description>
        <label>Growth Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>North Africa</fullName>
                </value>
                <value>
                    <fullName>North Europe</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>South Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hook__c</fullName>
        <label>Hook</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Box Checked - this account was updated as Inactive in Oracle</description>
        <inlineHelpText>If Box Checked - this account was updated as Inactive in Oracle.  If Unchecked - the account is considered Active</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Internal Sales Representative  of the customer. 
this field is manually loaded or populated from Oracle</description>
        <inlineHelpText>Internal Sales Representative  of the customer.</inlineHelpText>
        <label>Internal Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_This_an_On_Going_Project__c</fullName>
        <label>Is This an On-Going Project?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Number_If_Known__c</fullName>
        <label>Item Number (If Known)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to ID Key Accounts for Business Plan</description>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Year_Revenue_Generated__c</fullName>
        <label>Last Year Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Total__c, 0)&lt;&gt;0), Number_Leads_Converted__c / Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_To_Opportunity_Close_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Leads_Converted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead To Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__c</fullName>
        <label>Loop</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_Variance_to_PY_MTD__c</fullName>
        <description>EMEA only field</description>
        <formula>Actual_MTD_Gross_Sales__c  -  Previous_FY_MTD_Gross_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual MTD Gross Sales minus Previous FY MTD Gross Sales</inlineHelpText>
        <label>MTD Variance to PY MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The market of the account. Aerospace, Apparel, Auto Trucks &amp; Buses, Channels, Construction, Consumer, Government, Group, Health &amp; Beauty, Industrial, Manufacturing, Medical, Non-Apparel, Other Medical, Packaging, Personal Care, Transportation</inlineHelpText>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Markets_Served__c</fullName>
        <label>Markets Served</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>All Markets</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Architects</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Awning</fullName>
                </value>
                <value>
                    <fullName>Bindery</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Crafters</fullName>
                </value>
                <value>
                    <fullName>Custom Fabrication</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Displays</fullName>
                </value>
                <value>
                    <fullName>Drapery</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Engineering Services</fullName>
                </value>
                <value>
                    <fullName>Exhibits</fullName>
                </value>
                <value>
                    <fullName>Fabricators</fullName>
                </value>
                <value>
                    <fullName>Fortune 500</fullName>
                </value>
                <value>
                    <fullName>Framing / Frame Stores</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Budget_MTD__c</fullName>
        <inlineHelpText>Net Budget MTD from Oracle</inlineHelpText>
        <label>Net Budget MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Budget_YTD__c</fullName>
        <inlineHelpText>Net Budget YTD from Oracle</inlineHelpText>
        <label>Net Budget YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Budget__c</fullName>
        <inlineHelpText>Net Budget from Oracle.</inlineHelpText>
        <label>Net Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_PY_Potential_Pct_Variance_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF(Net_Budget__c &lt;&gt; 0, Previous_FY_Net_Sales__c  /  Net_Budget__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Previous FY Net Sales divided by Net Budget</inlineHelpText>
        <label>Net PY Potential % Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_PY_Potential_Variance_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>Previous_FY_Net_Sales__c  -  Net_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Previous FY Net Sales minus Net Budget</inlineHelpText>
        <label>Net PY Potential Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Potential_Forecast_Full_Year__c</fullName>
        <description>EMEA-only field</description>
        <label>Net Potential (Forecast Full Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Potential_Pct_Variance_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF(Net_Budget__c &lt;&gt; 0, Net_Potential_Forecast_Full_Year__c    /  Net_Budget__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Potential (Forecast Full Year) divided by Net Budget</inlineHelpText>
        <label>Net Potential % Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Potential_Variance_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>Previous_FY_Net_Sales__c  -  Net_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Previous FY Net Sales minus Net Budget</inlineHelpText>
        <label>Net Potential Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Account_Request_Approval_Help__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000005sXhB&quot;, &quot;New Account Flow&quot;)</formula>
        <label>New Account Request Approval Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Disclosure_Agreement_Required__c</fullName>
        <label>Non-Disclosure Agreement Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nueva_Cuenta_Flujo__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015A0000007GO4o&quot;, &quot;Flujo nueva cuenta&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nueva Cuenta Flujo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Number Closed Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Number Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Number Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Leads Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Number Leads Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Number Leads Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Open_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number open opportunities owned by the current partner account</description>
        <label>Number Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Category__c</fullName>
        <formula>Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Orders__c</fullName>
        <description>From Oracle</description>
        <inlineHelpText>Open orders (not shipped) with an expected shipped date in the current fiscal year</inlineHelpText>
        <label>Open Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Win_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Closed_Opportunities__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oracle_Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>The Account ID from Oracle (uniqueness not enforced) as there can be multiple acccounts with the same oracle account ID.</inlineHelpText>
        <label>Oracle Account Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Oracle_Account_Status__c</fullName>
        <description>EMEA-only field</description>
        <inlineHelpText>Populated via Oracle integration</inlineHelpText>
        <label>Oracle Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oracle_CS_Contact__c</fullName>
        <description>Oracle Customer Service Contact name</description>
        <inlineHelpText>Oracle sync: Customer Service Contact name</inlineHelpText>
        <label>Oracle CS Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Internal_Sales__c</fullName>
        <description>Oracle Internal sales rop</description>
        <inlineHelpText>oracle sync: Internal sales rep agent</inlineHelpText>
        <label>Oracle Internal Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Reg_Id__c</fullName>
        <description>EMEA-only field.</description>
        <label>Oracle Reg. Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Territory__c</fullName>
        <inlineHelpText>Account Territory from Oracle</inlineHelpText>
        <label>Territory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <description>Confirm what values should be in Org.</description>
        <inlineHelpText>Use the standard names ( VUSA, VAUS, VESA,VGMBH,VIF,VLTD, VCH ..)</inlineHelpText>
        <label>Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>Owner.Id</formula>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Purchase Order received and attached</inlineHelpText>
        <label>&lt;font color=&apos;Blue&apos;&gt;PO Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PY_Adjusted_Gross_Sales__c</fullName>
        <formula>Previous_FY_Gross_Sales__c + PY_Returns_Allowances_FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prior Year Gross Sales minus the Prior Year Returns &amp; Allowances (ie credits) for the Full Year</inlineHelpText>
        <label>PY Adjusted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_MTD_Adjusted_Gross_Sales__c</fullName>
        <formula>Previous_FY_MTD_Gross_Sales__c + PY_Returns_Allowances_MTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prior Year Gross Sales minus the Prior Year Returns &amp; Allowances (ie credits) for the month</inlineHelpText>
        <label>PY MTD Adjusted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_MTD_Net_Pct_Variance_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF(Net_Budget_MTD__c &lt;&gt; 0, Previous_FY_MTD_Net_Sales__c  /  Net_Budget_MTD__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Previous FY MTD Net Sales divided by Net Budget MTD</inlineHelpText>
        <label>PY MTD Net % Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PY_MTD_Net_Variance_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>Previous_FY_MTD_Net_Sales__c  -  Net_Budget_MTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Previous FY MTD Net Sales minus Net Budget MTD</inlineHelpText>
        <label>PY MTD Net Variance to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_Open_Orders__c</fullName>
        <description>From Oracle</description>
        <inlineHelpText>Open orders (not shipped) with an expected shipped date of the prior year</inlineHelpText>
        <label>Prior Year Open Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_Returns_Allowances_FY__c</fullName>
        <inlineHelpText>Prior Year Returns &amp; Allowances for the Full Year</inlineHelpText>
        <label>PY Returns &amp; Allowances FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_Returns_Allowances_MTD__c</fullName>
        <inlineHelpText>PY Returns &amp; Allowances for the Month</inlineHelpText>
        <label>PY Returns &amp; Allowances MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_Returns_Allowances_YTD__c</fullName>
        <inlineHelpText>Proir Year Returns &amp; Allowances for the Year to Date</inlineHelpText>
        <label>PY Returns &amp; Allowances YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_YTD_Adjusted_Gross_sales__c</fullName>
        <formula>Previous_FY_YTD_Gross_Sales__c + PY_Returns_Allowances_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prior Year Gross Sales minus the Prior Year Returns &amp; Allowances (ie credits) for Year to Date</inlineHelpText>
        <label>PY YTD Adjusted Gross sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Certification__c</fullName>
        <label>Partner Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expert Software Solutions Delivery</fullName>
                </value>
                <value>
                    <fullName>Authorized Business Consulting</fullName>
                </value>
                <value>
                    <fullName>Data Architecture Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Geographic_Coverage__c</fullName>
        <label>Partner Geographic Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>LACA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program_Level__c</fullName>
        <label>Partner Program Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type_1__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Converter</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>DevConnect Member</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Support Specialist</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>EMEA-only field</description>
        <inlineHelpText>Populated from Oracle.</inlineHelpText>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <inlineHelpText>Address other than shipping and billing address (such as headquarters or purchasing location)</inlineHelpText>
        <label>Post Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_FY_YTD_Net_Sales_Pct_Var_to_Budget__c</fullName>
        <description>EMEA-only field</description>
        <formula>IF(Net_Budget_YTD__c &lt;&gt; 0, Previous_FY_YTD_Net_Sales__c  /  Net_Budget_YTD__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Previous FY YTD Net Sales divided by Net Budget YTD</inlineHelpText>
        <label>Prev FY YTD Net Sales % Var to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Gross_Sales__c</fullName>
        <inlineHelpText>Previous FY Gross Sales from Oracle</inlineHelpText>
        <label>Previous FY Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_MTD_Bookings__c</fullName>
        <inlineHelpText>Previous FY MTD Bookings from Oracle</inlineHelpText>
        <label>Previous FY MTD Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_MTD_Gross_Sales__c</fullName>
        <inlineHelpText>Previous FY MTD Gross Sales from Oracle</inlineHelpText>
        <label>Previous FY MTD Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_MTD_Net_Sales__c</fullName>
        <inlineHelpText>Previous FY MTD Net Sales from Oracle</inlineHelpText>
        <label>Previous FY MTD Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Net_Sales__c</fullName>
        <inlineHelpText>Previous FY Net Sales from Oracle.</inlineHelpText>
        <label>Previous FY Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_YTD_Bookings__c</fullName>
        <inlineHelpText>Previous FY YTD Bookings from Oracle.</inlineHelpText>
        <label>Previous FY YTD Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_YTD_Gross_Sales__c</fullName>
        <inlineHelpText>Previous FY YTD Gross Sales from Oracle.</inlineHelpText>
        <label>Previous FY YTD Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_YTD_Net_Sales_Var_to_Bu__c</fullName>
        <description>EMEA-only field</description>
        <formula>Previous_FY_YTD_Net_Sales__c  -  Net_Budget_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Previous FY YTD Net Sales minus Net Budget YTD</inlineHelpText>
        <label>Previous FY YTD Net Sales Var. to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_YTD_Net_Sales__c</fullName>
        <inlineHelpText>Previous FY YTD Net Sales from Oracle</inlineHelpText>
        <label>Previous FY YTD Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimeAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prime Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>